# django_suren

./: commands.txt  probe.py  pyproject.toml  usefull
django_todo_manager/: docker-compose.yml
django_todo_manager/celeri_01/shop_app/: hint_celery.md
django_todo_manager/django_todo_manager/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
django_todo_manager/email_newslatters/: apps.py
django_todo_manager/email_newslatters/management/commands/: send_hello.py  send_hello_complex.py
django_todo_manager/email_newslatters/templates/email_newslatters/: welcom_messsage.html  welcom_messsage.txt
django_todo_manager/staticfiles/css/: style_00.css
django_todo_manager/templates/: base.html  index.html
django_todo_manager/templates/components/: navbar.html
django_todo_manager/templates/css/: style_00.css
django_todo_manager/todo_list/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
django_todo_manager/todo_list/migrations/: 0001_initial.py  0002_alter_todoitem_options.py  0003_todoitem_description.py  0004_todoitem_archived.py
django_todo_manager/todo_list/templates/todo_list/: base.html  index.html  task-status.html  todo-item-archived.txt  todoitem_confirm_delete.html  todoitem_detail.html  todoitem_form.html  todoitem_list.html  todoitem_update_form.html
django_todo_manager/todo_list/templates/todo_list/components/: todo_items_list.html
