[project]
name = "django-suren"
version = "0.1.0"
description = ""
authors = [
    {name = "HONOR",email = "busyginz@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2.4,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
