[project]
name = "django-suren"
version = "0.1.0"
description = ""
authors = [
    {name = "HONOR",email = "busyginz@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (==5.0.2)",
    "django-debug-toolbar (>=6.0.0,<7.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "django-celery-results (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
